--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/kuma.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kuma</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
